--- a/template.env
+++ b/template.env
@@ -1,2 +1,15 @@
+################################
+# PROJECT INFORMATION
+################################
+# e.g., path/to/credentials.json
 GOOGLE_APPLICATION_CREDENTIALS=XXXX
+# e.g., bucket-name
 CLOUD_BUCKET_NAME=XXXX
+# e.g., project-id-name
+PROJECT_ID=XXXX
+
+################################
+# MODEL OBJECTS (Keep as-is)
+################################
+FEATURE_PIPELINE=models/xgb/transformer.pkl
+GBT_MODEL=models/xgb/model.joblib
