--- a/template.env
+++ b/template.env
@@ -11,5 +11,6 @@ PROJECT_ID=XXXX
 ################################
 # MODEL OBJECTS (Keep as-is)
 ################################
-FEATURE_PIPELINE=models/xgb/transformer.pkl
-GBT_MODEL=models/xgb/model.joblib
+FEATURE_PIPELINE=saved_models/xgb/transformer.pkl
+GBT_MODEL=saved_models/xgb/model.joblib
+NN_MODEL=saved_models/nn
