--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
+joblib==1.2.0
 numpy==1.23.4
 pandas==1.5.1
 scikit_learn==1.1.3
-joblib==1.2.0
-protobuf==4.21.9
+tensorflow==2.8.3
 python-dotenv==0.21.0
 google-cloud-storage==2.6.*
 google-cloud-core==2.3.*
