--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ joblib==1.2.0
 numpy==1.23.4
 pandas==1.5.1
 scikit_learn==1.1.3
-tensorflow==2.8.3
+tensorflow>=2.9.3
 python-dotenv==0.21.0
 google-cloud-storage==2.6.*
 google-cloud-core==2.3.*
